--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <h1>fixed http over https heroku issue</h1>
     <div id="app"></div>
     <script src="bundle.js"></script>
   </body>
